--- a/roles/openshift_master/meta/main.yml
+++ b/roles/openshift_master/meta/main.yml
@@ -15,5 +15,6 @@ dependencies:
 - role: openshift_docker
 - role: openshift_cli
 - role: openshift_cloud_provider
+- role: openshift_builddefaults
 - role: openshift_master_facts
 - role: openshift_hosted_facts
