--- a/roles/os_zabbix/vars/template_openshift_node.yml
+++ b/roles/os_zabbix/vars/template_openshift_node.yml
@@ -26,6 +26,12 @@ g_template_openshift_node:
     applications:
     - Openshift Node
 
+  - key: openshift.node.docker-registry.ping
+    description: Ping docker-registry from node
+    type: int
+    applications:
+    - Openshift Node
+
   ztriggers:
   - name: 'Openshift Node process not running on {HOST.NAME}'
     expression: '{Template Openshift Node:openshift.node.process.count.max(#3)}<1'
