--- a/playbooks/adhoc/s3_registry/s3_registry.yml
+++ b/playbooks/adhoc/s3_registry/s3_registry.yml
@@ -15,6 +15,8 @@
     aws_secret_key: "{{ lookup('env', 'S3_SECRET_ACCESS_KEY') }}"
     aws_bucket_name: "{{ aws_bucket | default(clusterid ~ '-docker') }}"
     aws_bucket_region: "{{ aws_region | default(lookup('env', 'S3_REGION') | default('us-east-1', true)) }}"
+    aws_create_bucket: "{{ aws_create | default(True) }}"
+    aws_delete_after_run: "{{ aws_delete_temp | default(True) }}"
 
   tasks:
 
@@ -30,6 +32,7 @@
     command: oc scale --replicas=0 dc/docker-registry
 
   - name: Create S3 bucket
+    when: aws_create_bucket | bool
     local_action:
       module: s3 bucket="{{ aws_bucket_name }}" mode=create
 
@@ -71,3 +74,4 @@
 
   - name: Delete temporary config file
     file: path=/root/config.yml state=absent
+    when: aws_delete_after_run | bool
