Rename variable to delete temporary file, add configurable path.
The variable's name for deleting the temporary file was a bit
missleading, so it has been renamed to be more explicit.

While the path was hardcoded in /root/, which could be problematic when
the playbook is not run as run.

--- a/playbooks/adhoc/s3_registry/s3_registry.yml
+++ b/playbooks/adhoc/s3_registry/s3_registry.yml
@@ -16,7 +16,8 @@
     aws_bucket_name: "{{ aws_bucket | default(clusterid ~ '-docker') }}"
     aws_bucket_region: "{{ aws_region | default(lookup('env', 'S3_REGION') | default('us-east-1', true)) }}"
     aws_create_bucket: "{{ aws_create | default(True) }}"
-    aws_delete_after_run: "{{ aws_delete_temp | default(True) }}"
+    aws_tmp_path: "{{ aws_tmp_pathfile | default('/root/config.yml')}}"
+    aws_delete_tmp_file: "{{ aws_delete_tmp | default(True) }}"
 
   tasks:
 
@@ -73,5 +74,5 @@
     command: oc scale --replicas=1 dc/docker-registry
 
   - name: Delete temporary config file
-    file: path=/root/config.yml state=absent
-    when: aws_delete_after_run | bool
+    file: path={{ aws_tmp_path }} state=absent
+    when: aws_delete_tmp_file | bool
