--- a/roles/nuage_node/tasks/main.yaml
+++ b/roles/nuage_node/tasks/main.yaml
@@ -28,6 +28,9 @@
         - nuage.crt
         - nuage.key
         - nuage.kubeconfig 
+        - nuageMonClient.key
+        - nuageMonClient.crt
+        - nuageMonCA.crt
 
 - name: Set the vsp-openshift.yaml 
   sudo: true
