--- a/playbooks/byo/openshift-cluster/upgrades/v3_1_minor/upgrade.yml
+++ b/playbooks/byo/openshift-cluster/upgrades/v3_1_minor/upgrade.yml
@@ -6,6 +6,8 @@
     g_nfs_hosts: "{{ groups.nfs | default([]) }}"
     g_node_hosts: "{{ groups.nodes | default([]) }}"
     g_lb_hosts: "{{ groups.lb | default([]) }}"
+    g_new_master_hosts: "{{ groups.new_masters | default([]) }}"
+    g_new_node_hosts: "{{ groups.new_nodes | default([]) }}"
     openshift_cluster_id: "{{ cluster_id | default('default') }}"
     openshift_deployment_type: "{{ deployment_type }}"
 - include: ../../../../common/openshift-cluster/upgrades/v3_1_minor/pre.yml
