--- a/inventory/byo/hosts.aep.example
+++ b/inventory/byo/hosts.aep.example
@@ -163,6 +163,10 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 # Can not be changed after deployment.
 #osm_cluster_network_cidr=10.1.0.0/16
 
+# Configure number of bits to allocate to each host’s subnet e.g. 8
+# would mean a /24 network on the host.
+#osm_host_subnet_length=8
+
 # Configure master API and console ports.
 #openshift_master_api_port=8443
 #openshift_master_console_port=8443
