--- a/roles/openshift_docker_facts/meta/main.yml
+++ b/roles/openshift_docker_facts/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: Jason DeTiberus
-  description: OpenShift Docker
+  description: OpenShift Docker Facts
   company: Red Hat, Inc.
   license: Apache License, Version 2.0
   min_ansible_version: 1.9
@@ -12,6 +12,4 @@ galaxy_info:
   categories:
   - cloud
 dependencies:
-- role: openshift_docker
-  when: openshift.common.is_containerized | bool
-- role: openshift_common
+- { role: openshift_facts }
