--- a/roles/openshift_node/meta/main.yml
+++ b/roles/openshift_node/meta/main.yml
@@ -12,4 +12,5 @@ galaxy_info:
   categories:
   - cloud
 dependencies:
-- { role: openshift_common }
+- role: openshift_common
+- role: openshift_docker
