Synchronize master kube configs

--- a/roles/openshift_master_certificates/tasks/main.yml
+++ b/roles/openshift_master_certificates/tasks/main.yml
@@ -27,3 +27,12 @@
       --overwrite=false
   when: item.master_certs_missing | bool
   with_items: masters_needing_certs
+
+- file:
+    src: "{{ openshift_master_config_dir }}/{{ item.1 }}"
+    dest: "{{ openshift_generated_configs_dir }}/{{ item.0.master_cert_subdir }}/{{ item.1 }}"
+    state: hard
+    force: true
+  with_nested:
+  - masters_needing_certs
+  - "{{ hostvars[openshift.common.hostname] | certificates_to_synchronize }}"
