NFS Storage changes
- tweak the way we are setting openshift.hosted vars and only set them when
  the role is present on a host.
- do not persist empty values from openshift_env
- change openshift_storage_nfs to depend on openshift_facts rather than
  openshift_common (so that we do not pull in the openshift binary).
- better handle the case where the nfs server is not the master server.

--- a/playbooks/common/openshift-cluster/additional_config.yml
+++ b/playbooks/common/openshift-cluster/additional_config.yml
@@ -37,7 +37,7 @@
   vars:
     attach_registry_volume: "{{ openshift.hosted.registry.storage.kind != None }}"
     deploy_infra: "{{ openshift.master.infra_nodes | default([]) | length > 0 }}"
-    persistent_volumes: "{{ hostvars[groups.oo_first_master.0] | oo_persistent_volumes(groups) }}"
+    persistent_volumes: "{{ hostvars[groups.oo_first_master.0] | oo_persistent_volumes }}"
     persistent_volume_claims: "{{ hostvars[groups.oo_first_master.0] | oo_persistent_volume_claims }}"
   roles:
   - role: openshift_persistent_volumes
