--- a/playbooks/common/openshift-nfs/config.yml
+++ b/playbooks/common/openshift-nfs/config.yml
@@ -1,6 +1,7 @@
 ---
 - name: Configure nfs hosts
   hosts: oo_nfs_to_config
+  vars:
+    openshift_storage_delegate: "{{ groups.oo_first_master.0 }}"
   roles:
-  - role: openshift_facts
-  - role: openshift_storage_nfs
+  - openshift_storage_nfs
