--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -28,6 +28,10 @@
                                                         | default([]))
                                        | oo_collect('openshift.common.hostname')
                                        | default(none, true) }}"
+  - set_fact:
+      use_cluster_metrics_hawkular: "{{ lookup('oo_option', 'use_cluster_metrics_hawkular') | default(false, true) }}"
+    when: use_cluster_metrics_hawkular is not defined
+    
   roles:
   - openshift_facts
   post_tasks:
