--- a/roles/nuage_ca/tasks/main.yaml
+++ b/roles/nuage_ca/tasks/main.yaml
@@ -5,6 +5,8 @@
 
 - name: Create directory
   file: path={{ nuage_ca_dir }} state=directory
+  run_once: true
+  delegate_to: {{ groups.oo_first_master.0 }}
 
 - name: Create CA key
   command: openssl genrsa -out {{ nuage_ca_key }} 4096
@@ -13,5 +15,16 @@
  
 - name: Create CA crt
   command: openssl req -new -x509 -key {{ nuage_ca_key }} -out {{ nuage_ca_crt }} -subj "/CN=nuage-signer"
+  run_once: true
+  delegate_to: {{ groups.oo_first_master.0 }}
+
+- name: Create the serial file
+  copy: dest={{ nuage_ca_serial_file_path }}
+  content: "00"
+  run_once: true
+  delegate_to: {{ groups.oo_first_master.0 }}
+
+- name: Copy SSL config file
+  copy: src=openssl.cnf dest={{ nuage_ca_dir }}/openssl.cnf 
   run_once: true
   delegate_to: {{ groups.oo_first_master.0 }}
