--- a/roles/nuage_common/defaults/main.yaml
+++ b/roles/nuage_common/defaults/main.yaml
@@ -1,4 +1,9 @@
 ---
-nuage_ca_dir: /use/share/nuage-openshift-monitor-cert
+nuage_ca_dir: /usr/share/nuage-openshift-ca
 nuage_ca_key: {{ nuage_ca_dir }}/nuageMonCA.key
 nuage_ca_crt: {{ nuage_ca_dir }}/nuageMonCA.crt
+nuage_ca_serial_file_path: {{ nuage_ca_dir }}/nuageMonCA.serial.txt
+nuage_ca_crt_tmp_dir: /tmp/nuage_ca_dir
+
+nuage_master_mon_dir: /usr/share/nuage-openshift-monitor
+nuage_node_plugin_dir: /usr/share/vsp-openshift
