--- a/roles/nuage_master_certificate/tasks/main.yml
+++ b/roles/nuage_master_certificate/tasks/main.yml
@@ -1,13 +1,48 @@
 ---
 - name: Create the key
   command: >
-    openssl genrsa -out {{ nuage_master_key_path }} 4096  
+    openssl genrsa -out {{ nuage_ca_master_rest_server_key }} 4096  
+  delegate_to: nuage_ca_master
 
 - name: Create the req file
   command: >
-    openssl req -key {{ nuage_master_key_path }} -new -out {{ nuage_master_crt_dir }}/restServer.req -subj "/CN=$({{ ansible_nodename }})"
+    openssl req -key {{ nuage_ca_master_rest_server_key }} -new -out {{ nuage_ca_master_crt_dir }}/restServer.req -subj "/CN=$({{ ansible_nodename }})"
+  delegate_to: nuage_ca_master
 
 - name: Generate the crt file
   command: >
-     openssl x509 -req -in {{ nuage_master_crt_dir }}/restServer.req -CA {{ nuage_mon_ca_crt_tmp_dir }}/nuageMonCA.crt  -CAkey $REST_CA_KEY -CAserial $REST_CA_SERIAL \
-         -out $REST_SERVER_CERT
+     openssl x509 -req -in {{ nuage_ca_master_crt_dir }}/restServer.req -CA {{ nuage_ca_crt }} -CAkey {{ nuage_ca_key }} -CAserial {{ nuage_ca_serial }}  -out {{ nuage_ca_master_rest_server_crt }}
+  delegate_to: nuage_ca_master
+
+- name: Remove the req file
+  file: path={{ nuage_ca_master_crt_dir }}/restServer.req state=absent
+
+- name: Copy the CA crt
+  copy: src={{ nuage_ca_crt }} dest={{ nuage_ca_master_crt_dir }}/nuageMonCA.crt
+
+- name: Download the certificates
+  fetch: src={{ nuage_ca_master_crt_dir }}/{{ item }} dest={{ item }} 
+  with_items:
+    - nuageMonServer.key
+    - nuageMonServer.crt
+    - nuageMonCA.crt
+
+- name: Download the certificates
+  file: path={{ nuage_ca_master_crt_dir }}/{{ item }} state=absent 
+  with_items:
+    - nuageMonServer.key
+    - nuageMonServer.crt
+
+- name: Copy the certificates
+  copy: src={{ item }} dest={{ nuage_master_crt_dir }}/{{ item }}
+  with_items:
+    - nuageMonServer.key
+    - nuageMonServer.crt
+    - nuageMonCA.crt
+
+- name: Delete the certificates
+  local_action: command rm -f {{ item }}
+  with_items:
+    - nuageMonServer.key
+    - nuageMonServer.crt
+    - nuageMonCA.crt
