Added code to generate client certificates

--- a/roles/nuage_node_certificate/vars/main.yaml
+++ b/roles/nuage_node_certificate/vars/main.yaml
@@ -1,4 +1,4 @@
-nuage_node_crt_dir : /usr/share/vsp-openshift
-nuage_node_ca_crt_path : {{ nuage_node_crt_dir }}/nuageMonCA.crt
-nuage_node_key_path: {{ nuage_node_crt_dir }}/nuageMonServer.key
-nuage_node_crt_path: {{ nuage_node_crt_dir }}/nuageMonServer.crt
+nuage_ca_master_plugin_key: {{ nuage_ca_master_crt_dir }}/nuageMonClient.key
+nuage_ca_master_plugin_crt: {{ nuage_ca_master_crt_dir }}/nuageMonClient.crt 
+
+nuage_plugin_crt_dir : /usr/share/vsp-openshift
