--- a/roles/nuage_ca/tasks/main.yaml
+++ b/roles/nuage_ca/tasks/main.yaml
@@ -13,11 +13,16 @@
   run_once: true
   delegate_to: {{ nuage_ca_master }}
 
+- name: Check if the CA key already exists
+  stat: path={{ nuage_ca_key }}
+  register: nuage_ca_key_check
+
 - name: Create CA key
   command: openssl genrsa -out {{ nuage_ca_key }} 4096
   run_once: true
   delegate_to: {{ nuage_ca_master }}
- 
+  when: nuage_ca_key_check.stat.exists is defined and nuage_ca_key_check.stat.exists == False
+
 - name: Create CA crt
   command: openssl req -new -x509 -key {{ nuage_ca_key }} -out {{ nuage_ca_crt }} -subj "/CN=nuage-signer"
   run_once: true
