--- a/roles/nuage_ca/tasks/main.yaml
+++ b/roles/nuage_ca/tasks/main.yaml
@@ -1,40 +1,40 @@
 ---
 - name: Install openssl
-  action: "{{ ansible_pkg_mgr }} name=openssl state=present"
+  action: "{{ ansible_pkg_mgr }}" name=openssl state=present"
   when: not openshift.common.is_atomic | bool
 
 - name: Create CA directory
-  file: path={{ nuage_ca_dir }} state=directory
+  file: path="{{ nuage_ca_dir }}" state=directory
   run_once: true
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
 
 - name: Create certificate directory
-  file: path={{ nuage_ca_master_crt_dir }} state=directory
+  file: path="{{ nuage_ca_master_crt_dir }}" state=directory
   run_once: true
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
 
 - name: Check if the CA key already exists
-  stat: path={{ nuage_ca_key }}
+  stat: path="{{ nuage_ca_key }}"
   register: nuage_ca_key_check
 
 - name: Create CA key
-  command: openssl genrsa -out {{ nuage_ca_key }} 4096
+  command: openssl genrsa -out "{{ nuage_ca_key }}" 4096
   run_once: true
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
   when: nuage_ca_key_check.stat.exists is defined and nuage_ca_key_check.stat.exists == False
 
 - name: Create CA crt
-  command: openssl req -new -x509 -key {{ nuage_ca_key }} -out {{ nuage_ca_crt }} -subj "/CN=nuage-signer"
+  command: openssl req -new -x509 -key "{{ nuage_ca_key }}" -out "{{ nuage_ca_crt }}" -subj "/CN=nuage-signer"
   run_once: true
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
 
 - name: Create the serial file
-  copy: dest={{ nuage_ca_serial_file_path }}
+  copy: dest="{{ nuage_ca_serial_file_path }}"
   content: "00"
   run_once: true
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
 
 - name: Copy SSL config file
-  copy: src=openssl.cnf dest={{ nuage_ca_dir }}/openssl.cnf 
+  copy: src=openssl.cnf dest="{{ nuage_ca_dir }}/openssl.cnf" 
   run_once: true
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
