--- a/roles/nuage_ca/tasks/main.yaml
+++ b/roles/nuage_ca/tasks/main.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Install openssl
-  action: "{{ ansible_pkg_mgr }}" name=openssl state=present"
+  action: "{{ ansible_pkg_mgr }} name=openssl state=present"
   when: not openshift.common.is_atomic | bool
 
 - name: Create CA directory
@@ -29,8 +29,7 @@
   delegate_to: "{{ nuage_ca_master }}"
 
 - name: Create the serial file
-  copy: dest="{{ nuage_ca_serial_file_path }}"
-  content: "00"
+  copy: src=serial.txt dest="{{ nuage_ca_serial_file_path }}"
   run_once: true
   delegate_to: "{{ nuage_ca_master }}"
 
