--- a/roles/nuage_master/tasks/certificates.yml
+++ b/roles/nuage_master/tasks/certificates.yml
@@ -2,17 +2,17 @@
 - name: Create the key
   command: >
     openssl genrsa -out "{{ nuage_ca_master_rest_server_key }}" 4096  
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
 
 - name: Create the req file
   command: >
     openssl req -key "{{ nuage_ca_master_rest_server_key }}" -new -out "{{ nuage_ca_master_crt_dir }}/restServer.req -subj" "/CN=$("{{ ansible_nodename }}")"
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
 
 - name: Generate the crt file
   command: >
      openssl x509 -req -in "{{ nuage_ca_master_crt_dir }}/restServer.req" -CA "{{ nuage_ca_crt }}" -CAkey "{{ nuage_ca_key }}" -CAserial "{{ nuage_ca_serial }}"  -out "{{ nuage_ca_master_rest_server_crt }}"
-  delegate_to: {{ nuage_ca_master }}
+  delegate_to: "{{ nuage_ca_master }}"
 
 - name: Remove the req file
   file: path="{{ nuage_ca_master_crt_dir }}/restServer.req" state=absent
