fixed openssl command

--- a/roles/nuage_master/tasks/certificates.yml
+++ b/roles/nuage_master/tasks/certificates.yml
@@ -6,7 +6,7 @@
 
 - name: Create the req file
   command: >
-    openssl req -key "{{ nuage_ca_master_rest_server_key }}" -new -out "{{ nuage_ca_master_crt_dir }}/restServer.req -subj" "/CN=$("{{ ansible_nodename }}")"
+    openssl req -key "{{ nuage_ca_master_rest_server_key }}" -new -out "{{ nuage_ca_master_crt_dir }}/restServer.req" -subj "/CN=$("{{ ansible_nodename }}")"
   delegate_to: "{{ nuage_ca_master }}"
 
 - name: Generate the crt file
