--- a/roles/os_zabbix/vars/template_openshift_master.yml
+++ b/roles/os_zabbix/vars/template_openshift_master.yml
@@ -13,6 +13,18 @@ g_template_openshift_master:
     applications:
     - Openshift Master
 
+  - key: openshift.master.app.create.time
+    description: "check the time it takes app create with a build process"
+    type: int
+    applications:
+    - Openshift Master
+
+  - key: openshift.master.app.build.time
+    description: "check the time it takes app build"
+    type: int
+    applications:
+    - Openshift Master
+
   - key: openshift.master.process.count
     description: Shows number of master processes running
     type: int
