--- a/roles/nuage_master/tasks/certificates.yml
+++ b/roles/nuage_master/tasks/certificates.yml
@@ -1,4 +1,8 @@
 ---
+- name: Create a directory to hold the certificates
+  file: path="{{ nuage_mon_rest_server_crt_dir }}" state=directory
+  delegate_to: "{{ nuage_ca_master }}" 
+
 - name: Create the key
   command: >
     openssl genrsa -out "{{ nuage_ca_master_rest_server_key }}" 4096  
@@ -6,16 +10,16 @@
 
 - name: Create the req file
   command: >
-    openssl req -key "{{ nuage_ca_master_rest_server_key }}" -new -out "{{ nuage_ca_master_crt_dir }}/restServer.req" -subj "/CN=$("{{ ansible_nodename }}")"
+    openssl req -key "{{ nuage_ca_master_rest_server_key }}" -new -out "{{ nuage_mon_rest_server_crt_dir }}/restServer.req" -subj "/CN=$("{{ ansible_nodename }}")"
   delegate_to: "{{ nuage_ca_master }}"
 
 - name: Generate the crt file
   command: >
-     openssl x509 -req -in "{{ nuage_ca_master_crt_dir }}/restServer.req" -CA "{{ nuage_ca_crt }}" -CAkey "{{ nuage_ca_key }}" -CAserial "{{ nuage_ca_serial }}"  -out "{{ nuage_ca_master_rest_server_crt }}"
+     openssl x509 -req -in "{{ nuage_mon_rest_server_crt_dir }}/restServer.req" -CA "{{ nuage_ca_crt }}" -CAkey "{{ nuage_ca_key }}" -CAserial "{{ nuage_ca_serial }}"  -out "{{ nuage_ca_master_rest_server_crt }}"
   delegate_to: "{{ nuage_ca_master }}"
 
 - name: Remove the req file
-  file: path="{{ nuage_ca_master_crt_dir }}/restServer.req" state=absent
+  file: path="{{ nuage_mon_rest_server_crt_dir }}/restServer.req" state=absent
   delegate_to: "{{ nuage_ca_master }}"
 
 - name: Copy the CA certificate
@@ -23,8 +27,15 @@
   delegate_to: "{{ nuage_ca_master }}" 
 
 - name: Copy the REST server certificate and key
-  synchronize: src="{{ nuage_ca_master_crt_dir }}/{{ item }}" dest="{{ nuage_master_crt_dir }}/{{ item }}"
+  synchronize: src="{{ nuage_mon_rest_server_crt_dir }}/{{ item }}" dest="{{ nuage_master_crt_dir }}/{{ item }}"
   with_items:
     - nuageMonServer.key
     - nuageMonServer.crt
-  delegate_to: "{{ nuage_ca_master }}" 
+  delegate_to: "{{ nuage_ca_master }}"
+
+- name: Delete the certificates after copy
+  file: path="{{ nuage_mon_rest_server_crt_dir }}/{{ item }}" state=absent 
+  with_items:
+    - nuageMonServer.key
+    - nuageMonServer.crt
+  delegate_to: "{{ nuage_ca_master }}"
