--- a/roles/nuage_node/tasks/certificates.yml
+++ b/roles/nuage_node/tasks/certificates.yml
@@ -1,4 +1,8 @@
 ---
+- name: Create a directory to hold the certificates
+  file: path="{{ nuage_plugin_rest_client_crt_dir }}" state=directory
+  delegate_to: "{{ nuage_ca_master }}"
+
 - name: Create the key
   command: >
     openssl genrsa -out "{{ nuage_ca_master_plugin_key }}" 4096  
@@ -6,47 +10,32 @@
 
 - name: Create the req file
   command: >
-    openssl req -key "{{ nuage_ca_master_plugin_key }}" -new -out "{{ nuage_ca_master_crt_dir }}/restClient.req" -subj "/CN=nuage-client"
+    openssl req -key "{{ nuage_ca_master_plugin_key }}" -new -out "{{ nuage_plugin_rest_client_crt_dir }}/restClient.req" -subj "/CN=nuage-client"
   delegate_to: "{{ nuage_ca_master }}"
 
 - name: Generate the crt file
   command: >
-     openssl x509 -req -in "{{ nuage_ca_master_crt_dir }}/restClient.req" -CA "{{ nuage_ca_crt }}" -CAkey "{{ nuage_ca_key }}" -CAserial "{{ nuage_ca_serial }}"  -out "{{ nuage_ca_master_plugin_crt }}" -extensions clientauth -extfile "{{ nuage_ca_dir }}"/openssl.cnf 
+     openssl x509 -req -in "{{ nuage_plugin_rest_client_crt_dir }}/restClient.req" -CA "{{ nuage_ca_crt }}" -CAkey "{{ nuage_ca_key }}" -CAserial "{{ nuage_ca_serial }}"  -out "{{ nuage_ca_master_plugin_crt }}" -extensions clientauth -extfile "{{ nuage_ca_dir }}"/openssl.cnf 
   delegate_to: "{{ nuage_ca_master }}"
 
 - name: Remove the req file
-  file: path="{{ nuage_ca_master_crt_dir }}/restClient.req" state=absent
+  file: path="{{ nuage_plugin_rest_client_crt_dir }}/restClient.req" state=absent
   delegate_to: "{{ nuage_ca_master }}"
 
-- name: Copy the CA crt
-  shell: "cp {{ nuage_ca_crt }} {{ nuage_ca_master_crt_dir }}/nuageMonCA.crt"
-  delegate_to: "{{ nuage_ca_master }}"
+- name: Copy the CA certificate
+  synchronize: src="{{ nuage_ca_crt }}" dest="{{ nuage_plugin_crt_dir }}/nuageMonCA.crt"
+  delegate_to: "{{ nuage_ca_master }}" 
 
-- name: Download the certificates
-  fetch: src="{{ nuage_ca_master_crt_dir }}/{{ item }}" dest="{{ item }}" 
-  with_items:
-    - nuageMonClient.key
-    - nuageMonClient.crt
-    - nuageMonCA.crt
-  delegate_to: "{{ nuage_ca_master }}"
-   
-- name: Remove the certificates from the CA host
-  file: path="{{ nuage_ca_master_crt_dir }}/{{ item }}" state=absent 
+- name: Copy the plugin certificate and key
+  synchronize: src="{{ nuage_plugin_rest_client_crt_dir }}/{{ item }}" dest="{{ nuage_plugin_crt_dir }}/{{ item }}"
   with_items:
     - nuageMonClient.key
     - nuageMonClient.crt
   delegate_to: "{{ nuage_ca_master }}"
 
-- name: Copy the certificates
-  copy: src="{{ item }}" dest="{{ nuage_plugin_crt_dir }}/{{ item }}"
+- name: Delete the certificates after copy
+  file: path="{{ nuage_plugin_rest_client_crt_dir }}/{{ item }}" state=absent 
   with_items:
     - nuageMonClient.key
     - nuageMonClient.crt
-    - nuageMonCA.crt
-
-- name: Delete the certificates
-  local_action: command rm -rf "{{ item }}"
-  with_items:
-    - nuageMonClient.key
-    - nuageMonClient.crt
-    - nuageMonCA.crt
+  delegate_to: "{{ nuage_ca_master }}"
