--- a/roles/nuage_node/tasks/certificates.yml
+++ b/roles/nuage_node/tasks/certificates.yml
@@ -22,20 +22,25 @@
   file: path="{{ nuage_plugin_rest_client_crt_dir }}/restClient.req" state=absent
   delegate_to: "{{ nuage_ca_master }}"
 
-- name: Copy the CA certificate
-  synchronize: mode=push src="{{ nuage_ca_crt }}" dest="{{ nuage_plugin_crt_dir }}/nuageMonCA.crt"
-  delegate_to: "{{ nuage_ca_master }}" 
-
-- name: Copy the plugin certificate and key
-  synchronize: mode=push src="{{ nuage_plugin_rest_client_crt_dir }}/{{ item }}" dest="{{ nuage_plugin_crt_dir }}/{{ item }}"
-  with_items:
-    - nuageMonClient.key
-    - nuageMonClient.crt
+- name: Copy nuage CA crt
+  shell: cp "{{ nuage_ca_crt }}" "{{ nuage_plugin_rest_client_crt_dir }}"
   delegate_to: "{{ nuage_ca_master }}"
 
+- name: Archive the certificate dir
+  shell: "cd {{ nuage_plugin_rest_client_crt_dir }} && zip -j /tmp/{{ ansible_hostname }}.zip *"
+  delegate_to: "{{ nuage_ca_master }}"
+
+- name: Create a temp directory for the certificates 
+  local_action: command mktemp -d "/tmp/openshift-{{ ansible_hostname }}-XXXXXXX"
+  register: mktemp
+
+- name: Download the certificates
+  fetch: src="/tmp/{{ ansible_hostname }}.zip" dest="{{ mktemp.stdout }}/{{ ansible_hostname }}.zip" flat=yes
+  delegate_to: "{{ nuage_ca_master }}"
+
+- name: Extract the certificates
+  unarchive: src="{{ mktemp.stdout }}/{{ ansible_hostname }}.zip" dest={{ nuage_plugin_crt_dir }}
+
 - name: Delete the certificates after copy
-  file: path="{{ nuage_plugin_rest_client_crt_dir }}/{{ item }}" state=absent 
-  with_items:
-    - nuageMonClient.key
-    - nuageMonClient.crt
+  file: path="{{ nuage_plugin_rest_client_crt_dir }}" state=absent 
   delegate_to: "{{ nuage_ca_master }}"
